--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,8 @@ margin: 0 auto;
 /*!-----------------------HEADER-----------------------*/
 
 .header {
-border-bottom: 1px solid #e7e9fc
+border-bottom: 1px solid #e7e9fc;
+box-shadow:  0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);;
 }
 
 .header-container {
@@ -106,12 +107,12 @@ border-bottom: 1px solid #e7e9fc;
 position: relative;
 }
 
-.current {
+.header-menu-item .current {
 color: var(--ocean-cl);
 position: relative;
 }
 
-.current::after {
+.header-menu-item .current::after {
 content: "";
 position: absolute;
 width: 48px;
@@ -126,18 +127,20 @@ bottom: -1px;
 .current-2 {
 color: var(--ocean-cl);
 position: relative;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current-2::after {
-content: "";
+content: '';
 position: absolute;
 width: 66px;
 height: 4px;
-right: 0;
+left: 0;
 border-radius: 2px;
 background: var(--ocean, #404BBF);
 left: 0;
 bottom: -1px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link {
@@ -153,7 +156,7 @@ padding: 24px 0;
 .header-menu-link:hover,
 .header-menu-link:focus {
 color: var(--ocean-cl);
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-contact {
@@ -195,6 +198,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
+max-width: 1440px;
 }
 
 .hero-title {
@@ -231,6 +235,7 @@ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 border: none;
 margin: 0 auto;
 min-width: 169px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover,
@@ -255,6 +260,11 @@ justify-content: center;
 border-radius: 4px;
 background: var(--cloud, #F4F4FD);
 margin-bottom: 8px;
+}
+
+.advantages-item-icon {
+width: 64px;
+height: 64px;
 }
 
 .advantages-list {
@@ -385,7 +395,7 @@ padding-top: 32px;
 }
 
 .team-socials{
-padding-bottom: 32px;
+padding: 32px 0;
 }
 
 .team-socials-list {
@@ -479,10 +489,18 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 /*?-----------------------FOOTER-----------------------*/
 
 .footer-item {
-display: flex;
 background-color: var(--main-cl);
 padding-top: 100px;
 padding-bottom: 100px;
+}
+
+.footer-container {
+display: flex;
+align-items: baseline;
+}
+
+.container-footer-logo {
+margin-right: 120px;
 }
 
 .logo-link {
@@ -516,7 +534,7 @@ align-items: center;
 flex-shrink: 0;
 }
 
-.footer-socials-title{
+.footer-socials-title {
 margin-bottom: 16px;
 font-family: 'Roboto';
 font-weight: 500px;
@@ -542,7 +560,7 @@ align-items: center;
 justify-content: center;
 }
 
-.footer-socials-item {
+.footer-socials-icon {
 width: 40px;
 height: 40px;
 }
@@ -722,9 +740,9 @@ transform: translate(-50%, -50%) scale(1);
 width: 408px;
 min-height: 584px;
 border-radius: 4px;
-background: var(--dairy, #FCFCFC);
+background-color: rgba(46, 47, 66, 0.4);
 box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-transition: transform 300ms linear;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
@@ -733,8 +751,21 @@ transform: translate(-50%, -50%) scale(0);
 
 .modal-close-btn {
 position: absolute;
+width: 24px;
+height: 24px;
 top: 24px;
 right: 24px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: var(----cornflower);
+border: 1px solid rgba(0, 0, 0, 0.1);
+padding: 0;
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+background-color: var(--ocean-cl);
+border: none;
 }
 
 .is-hidden {
