--- a/css/styles.css
+++ b/css/styles.css
@@ -388,6 +388,7 @@ letter-spacing: 0.02em;
 text-align: center;
 color: var(--slate-cl);
 margin-top: 8px;
+margin-bottom: 8px;
 }
 
 .team-worker {
@@ -402,7 +403,6 @@ padding: 32px 0;
 display: flex;
 align-items: center;
 gap: 24px;
-padding-top: 8px;
 }
 
 .team-socials-item {
@@ -413,6 +413,8 @@ height: 40px;
 fill: var(--white-cl);
 border-radius: 50%;
 background-color: var(--iris-cl);
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin-bottom: 32px;
 }
 
 .team-socials-link {
@@ -554,15 +556,14 @@ color: var(--cloud-cl);
 width: 264px;
 }
 
-.footer-socials {
-display: flex;
-align-items: center;
-justify-content: center;
+.footer-socials-item {
+width: 40px;
+height: 40px;
 }
 
 .footer-socials-icon {
-width: 40px;
-height: 40px;
+width: 24px;
+height: 24px;
 }
 
 .footer-socials-link{
