--- a/css/styles.css
+++ b/css/styles.css
@@ -107,21 +107,22 @@ border-bottom: 1px solid #e7e9fc;
 position: relative;
 }
 
-.header-menu-item .current {
+.current-1 {
 color: var(--ocean-cl);
 position: relative;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-menu-item .current::after {
-content: "";
+.current-1::after {
+content: '';
 position: absolute;
 width: 48px;
 height: 4px;
-right: 0;
 border-radius: 2px;
 background: var(--ocean, #404BBF);
 left: 0;
 bottom: -1px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current-2 {
@@ -135,7 +136,6 @@ content: '';
 position: absolute;
 width: 66px;
 height: 4px;
-left: 0;
 border-radius: 2px;
 background: var(--ocean, #404BBF);
 left: 0;
@@ -392,7 +392,7 @@ margin-bottom: 8px;
 }
 
 .team-worker {
-padding-top: 32px;
+padding-top: 32px 0;
 }
 
 .team-socials{
@@ -401,6 +401,7 @@ padding: 32px 0;
 
 .team-socials-list {
 display: flex;
+justify-content: center;
 align-items: center;
 gap: 24px;
 }
@@ -413,8 +414,12 @@ height: 40px;
 fill: var(--white-cl);
 border-radius: 50%;
 background-color: var(--iris-cl);
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 margin-bottom: 32px;
+}
+
+.team-socials-icon {
+fill: var(--cloud-cl);
 }
 
 .team-socials-link {
@@ -437,7 +442,7 @@ background-color: var(--ocean, #404BBF);
 
 .customers {
 background-color: var(--white-cl);
-padding-top: 120px;
+padding: 120px 0;
 }
 
 .customers-title {
@@ -460,8 +465,31 @@ justify-content: center;
 padding-bottom: 120px;
 }
 
+.customers-link {
+width: 100%;
+height: 100%;
+border: 1px solid var(--lightslate-cl);
+border-radius: 4px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: var(--lightslate-cl);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+border-color: var(--ocean-cl);
+color: var(--ocean-cl);
+}
+
+.customers-item-icon {
+width: 104px;
+height: 56px;
+fill: currentColor;
+}
+
 .customers-item {
-width: 168px;
+width: calc((100% - 120px) / 6);
 height: 88px;
 display: flex;
 align-items: center;
@@ -469,6 +497,7 @@ justify-content: center;
 border-radius: 4px;
 border: 1px solid var(--lightslate, #8E8F99);
 margin-bottom: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-item:hover,
@@ -539,7 +568,7 @@ flex-shrink: 0;
 .footer-socials-title {
 margin-bottom: 16px;
 font-family: 'Roboto';
-font-weight: 500px;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -637,6 +666,7 @@ color: var(--white-cl);
 background-color: var(--ocean-cl);
 border: 1px solid transparent;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*?-----------------------TABS-----------------------*/
