--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,7 @@ padding-bottom: 24px;
 color: var(--main-cl);
 }
 
+
 .header-navigation {
 display: flex;
 align-items: center;
@@ -100,47 +101,12 @@ align-items: center;
 .header-menu-list {
 display: flex;
 gap: 40px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .head-menu-item {
 border-bottom: 1px solid #e7e9fc;
 position: relative;
-}
-
-.current-1 {
-color: var(--ocean-cl);
-position: relative;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current-1::after {
-content: '';
-position: absolute;
-width: 48px;
-height: 4px;
-border-radius: 2px;
-background: var(--ocean, #404BBF);
-left: 0;
-bottom: -1px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current-2 {
-color: var(--ocean-cl);
-position: relative;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.current-2::after {
-content: '';
-position: absolute;
-width: 66px;
-height: 4px;
-border-radius: 2px;
-background: var(--ocean, #404BBF);
-left: 0;
-bottom: -1px;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link {
@@ -150,14 +116,16 @@ line-height: 1.50;
 letter-spacing: 0.02em;
 color: var(--main-cl);
 padding: 24px 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 .header-menu-link:hover,
 .header-menu-link:focus {
 color: var(--ocean-cl);
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
 
 .header-address-contact {
 margin-left: auto;
@@ -186,6 +154,22 @@ padding: 24px 0;
 color: var(--ocean-cl);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.current {
+position: relative;
+color: var(--ocean-cl);
+}
+
+.current::after {
+content: '';
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: var(--ocean-cl);
+border-radius: 2px;
+}
+
 
 /**-----------------------HERO-----------------------*/
 
@@ -462,24 +446,6 @@ display: flex;
 gap: 24px;
 align-items: center;
 justify-content: center;
-padding-bottom: 120px;
-}
-
-.customers-link {
-width: 100%;
-height: 100%;
-border: 1px solid var(--lightslate-cl);
-border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
-color: var(--lightslate-cl);
-}
-
-.customers-link:hover,
-.customers-link:focus {
-border-color: var(--ocean-cl);
-color: var(--ocean-cl);
 }
 
 .customers-item-icon {
@@ -504,6 +470,24 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .customers-item:focus {
 border: 1px solid var(--ocean-cl);
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link {
+width: 100%;
+height: 100%;
+border: 1px solid var(--lightslate-cl);
+border-radius: 4px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: var(--lightslate-cl);
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-link:hover,
+.customers-link:focus {
+border-color: var(--ocean-cl);
+color: var(--ocean-cl);
 }
 
 .customers-item {
@@ -645,6 +629,10 @@ justify-content: center;
 margin-bottom: 72px;
 }
 
+.portfolio-category-item {
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-category-btn {
 font-family: Roboto, sans-serif;
 font-size: 16px;
@@ -678,6 +666,8 @@ flex-wrap: wrap;
 gap: 48px 24px;
 column-gap: 24px;
 row-gap: 48px;
+max-width: 100%;
+height: auto;
 }
 
 .tabs-item {
@@ -701,7 +691,16 @@ height: auto;
 }
 
 .tabs-link {
-text-decoration: none;
+display: block;
+max-width: 100%;
+height: auto;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.tabs-link:hover,
+.tabs-link:focus {
+box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+transform: translateY(0%);
 }
 
 .tabs-content {
@@ -761,6 +760,8 @@ height: 100%;
 background-color: rgba(76, 76, 76, 0.596);
 top: 0;
 transition: opacity 300ms linear, visibility 300ms linear;
+background-color: rgba(46, 47, 66, 0.4);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -771,13 +772,17 @@ transform: translate(-50%, -50%) scale(1);
 width: 408px;
 min-height: 584px;
 border-radius: 4px;
-background-color: rgba(46, 47, 66, 0.4);
+background: #fcfcfc;
 box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
 transform: translate(-50%, -50%) scale(0);
+}
+
+.close-btn-icon {
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
@@ -790,13 +795,16 @@ border-radius: 50%;
 display: flex;
 align-items: center;
 justify-content: center;
-background-color: var(----cornflower);
-border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
 cursor: pointer;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-background-color: var(--ocean-cl);
-border: none;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+fill: var(--white-cl);
 }
 
 .is-hidden {
