--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,9 @@ display: flex;
 gap: 40px;
 }
 
+.header-address-item {
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .header-address-contact {
 font-style: normal;
@@ -376,7 +379,7 @@ margin-bottom: 8px;
 }
 
 .team-worker {
-padding-top: 32px 0;
+padding: 32px 0;
 }
 
 .team-socials{
@@ -473,13 +476,13 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link {
+display: flex;
+align-items: center;
+justify-content: center;
 width: 100%;
 height: 100%;
 border: 1px solid var(--lightslate-cl);
 border-radius: 4px;
-display: flex;
-align-items: center;
-justify-content: center;
 color: var(--lightslate-cl);
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -646,6 +649,7 @@ padding: 12px 24px 12px 24px;
 border: none;
 border: 1px solid #e7e9fc;
 border-radius: 4px;
+transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .portfolio-category-btn:hover,
@@ -744,6 +748,14 @@ font-weight: 400;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--cloud, #F4F4FD);
+position: absolute;
+top: 0;
+padding: 40px 32px;
+background-color: var(--iris-cl);
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .tabs-cover-wrap {
