--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .head-menu-item {
 border-bottom: 1px solid #e7e9fc;
 position: relative;
+transition: border-bottom 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-link {
@@ -150,12 +151,12 @@ line-height: 1.50;
 letter-spacing: 0.02em;
 color: var(--slate-cl);
 padding: 24px 0;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-address-link:hover,
 .header-address-link:focus {
 color: var(--ocean-cl);
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current {
@@ -476,11 +477,11 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link {
+width: 100%;
+height: 100%;
 display: flex;
 align-items: center;
 justify-content: center;
-width: 100%;
-height: 100%;
 border: 1px solid var(--lightslate-cl);
 border-radius: 4px;
 color: var(--lightslate-cl);
@@ -699,6 +700,7 @@ display: block;
 max-width: 100%;
 height: auto;
 transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transform: translateY(0%);
 }
 
 .tabs-link:hover,
@@ -828,6 +830,8 @@ border: 1px solid rgba(0, 0, 0, 0.1);
 .modal-close-btn:hover,
 .modal-close-btn:focus {
 fill: var(--white-cl);
+border: none;
+background-color: var(--ocean-cl);
 }
 
 .is-hidden {
