--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,8 @@ display: flex;
 gap: 24px;
 align-items: center;
 justify-content: center;
+width: 100%;
+height: 100%;
 }
 
 .customers-item-icon {
@@ -703,7 +705,11 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 transform: translateY(0%);
 }
 
-.tabs-link:hover,
+.tabs-link:hover {
+box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+transform: translateY(0%);
+}
+
 .tabs-link:focus {
 box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 transform: translateY(0%);
