--- a/css/styles.css
+++ b/css/styles.css
@@ -450,26 +450,14 @@ display: flex;
 gap: 24px;
 align-items: center;
 justify-content: center;
-width: 100%;
-height: 100%;
 }
 
 .customers-item-icon {
 width: 104px;
 height: 56px;
 fill: currentColor;
-}
-
-.customers-item {
-width: calc((100% - 120px) / 6);
-height: 88px;
-display: flex;
-align-items: center;
-justify-content: center;
-border-radius: 4px;
-border: 1px solid var(--lightslate, #8E8F99);
-margin-bottom: 8px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: 100%;
+height: 100%;
 }
 
 .customers-item:hover,
@@ -488,6 +476,18 @@ border: 1px solid var(--lightslate-cl);
 border-radius: 4px;
 color: var(--lightslate-cl);
 transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customers-item {
+width: calc((100% - 120px) / 6);
+height: 88px;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 4px;
+border: 1px solid var(--lightslate, #8E8F99);
+margin-bottom: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-link:hover,
@@ -779,6 +779,10 @@ transform: translateY(0);
 
 .tabs-item:hover .tabs-cover-text,
 .tabs-item:focus .tabs-cover-text {
+transform: translateY(0);
+}
+
+.tabs-link:focus .tabs-cover-text {
 transform: translateY(0);
 }
 
