--- a/css/styles.css
+++ b/css/styles.css
@@ -433,6 +433,11 @@ background-color: var(--white-cl);
 padding: 120px 0;
 }
 
+.customers-container {
+width: 100%;
+height: 100%;
+}
+
 .customers-title {
 font-family: Roboto;
 font-size: 36px;
